Road geometry in line exports